Moved .ts files to src, .js/.map go to build

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "npm run clean && tsc",
     "clean": "rm -f *.js *.js.map",
     "lint": "eslint *.ts",
-    "start": "node --experimental-specifier-resolution=node --harmony -r source-map-support/register run.js",
+    "start": "node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/run.js",
     "test": "node --harmony node_modules/.bin/jest"
   },
   "dependencies": {
