--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "allowSyntheticDefaultImports": true,  // allow default imports from modules with no default export. This does not affect code emit, just typechecking.
     "moduleResolution": "node",  // find modules in node_modules - https://github.com/Microsoft/TypeScript/issues/8189#issuecomment-212079251
     "types": ["node", "jest"],  // Influx uses built-in node modules like http or url
-    "sourceMap": true
+    "sourceMap": true,
+    "rootDir": "src",
+    "outDir": "build"
   }
 }
