--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "test": "node --harmony node_modules/.bin/jest"
   },
   "dependencies": {
-    "influx": "^5.6.0"
+    "influx": "^5.6.0",
+    "pino": "^6.11.1"
   },
   "devDependencies": {
+    "@types/pino": "^6.3.5",
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.26",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
