--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests on Node 13
+# This workflow will do a clean install of node dependencies, build the source code and run tests on Node 14
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 # Syntax: https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [13.x, 14.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -23,8 +23,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    # Install dependencies
-    - run: npm ci
-
-    - name: Run tests
-      run: npm t
+    - run: yarn
+    - run: yarn test
