--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
     "build": "npm run clean && tsc",
     "clean": "rm -f *.js *.js.map",
     "lint": "eslint *.ts",
-    "start": "node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/run.js",
+    "start": "node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/index.js",
+    "dev": "npm run build && node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/index.js | pino-pretty -t",
     "test": "node --harmony node_modules/.bin/jest"
   },
   "dependencies": {
+    "activedirectory2": "^2.1.0",
+    "dotenv": "^8.2.0",
     "influx": "^5.6.0",
+    "mssql": "^6.3.1",
     "pino": "^6.11.1"
   },
   "devDependencies": {
-    "@types/pino": "^6.3.5",
+    "@types/activedirectory2": "^1.2.2",
     "@types/jest": "^26.0.7",
+    "@types/mssql": "^6.0.7",
     "@types/node": "^14.0.26",
+    "@types/pino": "^6.3.5",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "eslint": "^7.5.0",
