--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
-  "name": "tsmodules",
-  "version": "1.1.0",
-  "description": "TypeScript project template to import modules without extension, and modules with default exports that use node built-ins",
+  "name": "qlik_sense_import_manager_job",
+  "version": "1.0.0",
+  "description": "TypeScript project template for automation jobs",
   "keywords": [
     "typescript",
     "modules",
     "es modules",
     "esnext",
-    "influxdb",
-    "apollo-server"
+    "mssql",
+    "active directory",
+    "pino"
   ],
   "license": "MIT",
-  "author": "dandv",
+  "author": "F.Lardieri - Honegger AG",
   "type": "module",
-  "main": "run.js",
+  "main": "index.js",
   "scripts": {
+    "create-log": "@powershell \"New-EventLog -LogName Application -Source 'QlikSense: Import Manager Job'\"",
+    "log": "@powershell -Command \"Write-EventLog -LogName Application -Source 'QlikSense: Import Manager Job' -EntryType Error -Message $input -EventId 1\"",
     "build": "npm run clean && tsc",
-    "clean": "rm -f *.js *.js.map",
+    "clean": "rm -f build/*.js build/*.js.map build/modules/*.js build/modules/*.js.map",
     "lint": "eslint *.ts",
-    "start": "node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/index.js",
-    "dev": "npm run build && node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/index.js | pino-pretty -t",
+    "start": "node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/index.js | node build/pino-mailer.js | npm run log",
+    "start-dev": "npm run build && node --experimental-specifier-resolution=node --harmony -r source-map-support/register build/index.js | pino-pretty -t",
     "test": "node --harmony node_modules/.bin/jest"
   },
   "dependencies": {
     "activedirectory2": "^2.1.0",
     "dotenv": "^8.2.0",
-    "influx": "^5.6.0",
     "mssql": "^6.3.1",
-    "pino": "^6.11.1"
+    "nodemailer": "^6.4.17",
+    "pino": "^6.11.1",
+    "pump": "^3.0.0",
+    "split2": "^3.2.2",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
     "@types/activedirectory2": "^1.2.2",
     "@types/jest": "^26.0.7",
     "@types/mssql": "^6.0.7",
     "@types/node": "^14.0.26",
+    "@types/nodemailer": "^6.4.0",
     "@types/pino": "^6.3.5",
+    "@types/pump": "^1.1.0",
+    "@types/split2": "^2.1.6",
+    "@types/through2": "^2.0.36",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "eslint": "^7.5.0",
